cabal-version:      3.0
name:               vigenere
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             Andreas Stamos
maintainer:         stamos.aa@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable vigenere
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.0.0, vector
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-prof-options: -fprof-auto -rtsopts

