cabal-version:      3.0
name:               bbs
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Andreas Stamos
maintainer:         stamos.aa@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  NTheory, BBS
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0, MonadRandom, millerrabin
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite bbs-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        QuickCheck,
        hspec,
        bbs,
        MonadRandom

